--- a/report/reporte_planilla.xml
+++ b/report/reporte_planilla.xml
@@ -174,7 +174,7 @@
 							<tr>
 								<td style="border: 1px solid">Nombre</td>
 								<td style="border: 1px solid">Oficio</td>
-								<td style="border: 1px solid">Peajes/Facturas</td>
+								<td style="border: 1px solid">Facturas</td>
 								<td style="border: 1px solid">Noches</td>
 								<td style="border: 1px solid">Por viaje realizado</td>
 								<td style="border: 1px solid">Adelanto/Otros</td>
